--- a/L2/public_html/index.html
+++ b/L2/public_html/index.html
@@ -9,7 +9,7 @@
 
 <form action="/api/v1/sessions" method="POST">
     Login: <input type="text" name="login"/>
-    Password: <input type="password" name="pass"/>
+    Password: <input type="password" name="password"/>
     <input type="submit" value="Sign in">
 </form>
 </body>
