--- a/L2/public_html/index.html
+++ b/L2/public_html/index.html
@@ -12,5 +12,11 @@
     Password: <input type="password" name="password"/>
     <input type="submit" value="Sign in">
 </form>
+
+<form action="/signup" method="POST">
+    Login2: <input type="text" name="login"/>
+    Password2: <input type="password" name="password"/>
+    <input type="submit" value="Sign in">
+</form>
 </body>
 </html>
